--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1215,7 +1215,7 @@
 
 
             #courses {
-                padding-top: 100px;
+                padding: 100px 0 70px 0;
             }
 
             #courses #top_panel {
